--- a/main.css
+++ b/main.css
@@ -10,7 +10,9 @@
     width: 35px;
 }
 #menubutton{
+    margin-top: 4px;
     width: 50px;
+    height: 100%;
     float: right;
     transition-duration: 0.3s;
 }
@@ -18,6 +20,22 @@
     transition-duration: 0.3s;
     cursor: pointer;
     /* background-color: black; */
+}
+.menuline{
+    margin-top: 7px;
+    position: relative;
+    
+    height: 5px;
+    background-color: black;
+}
+.menuline-1{
+    width: 40px;
+}
+.menuline-2{
+    width: 35px;
+}
+.menuline-3{
+    width: 30px;
 }
 #search{
     margin-top:8px;
@@ -34,6 +52,7 @@ html,body{
 body{
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
 }
 .popup{
     position: absolute;
@@ -51,29 +70,36 @@ body{
 }
 .menu{
     position: absolute;
-    background-color: green;
+    background: rgba(0,0, 0, 0.8);
+    color:  wheat;
     /* float: right; */
     text-align: center;
     right: 0;
     width: 30%;;
     height: 100%;
     z-index: 2;
-    overflow: hidden;
-    
+    /* overflow: hidden; */
+    transform : translateX(100%);
+    transition-duration: 0.4s;
 }
+
 nav{
     height: 5%;
     z-index: 1;
+    overflow: hidden;
     /* background-color:; */
+    border-bottom:1px solid gray;
+    border-radius: 5px;
 }
 .background{
     display: flex;
-    height: 95%;
+    height: 60%;
     position: relative;
-    background-color:rgb(55, 71, 101) ;
+    /* background-color:rgb(55, 71, 101) ; */
+    background-color: white;
 }
 main{
-    margin-top: 200px;
+    margin-top: 50px;
     background-color: white;
     width: 100%;
     height: 500px;
@@ -87,7 +113,7 @@ main{
     width: 150px;
     height: 6px;
     left: 50%;
-    top: 69.6%;
+    top: 89%;
     border: 1px solid #D8D8D8;
     background-color: #D8D8D8;
     border-radius: 15px;
@@ -121,23 +147,30 @@ main{
     left: 3%;
 }
 .card{
-    margin-top: 13px;
-    margin-left: 0.5%;
+    /* margin-top: 13px; */
+    /* margin-left: 0.5%; */
     text-align: center;
     float:left;
-    max-width: 300px;
-    height: 470px;
-    border-radius: 5px;   
+    width: 800px;
+    height: 100%;
+    /* border-radius: 5px;    */
     transition-duration: 0.5s;
     z-index: 0;
+    transform:translateX(-570px);
 }
-.card:hover{
+/* .card:hover{
     box-shadow: 0px 5px 10px 5px gray;
     transition-duration: 0.2s;
     opacity: 0.8;
-}
+} */
 /* .c1{
     transition: 1s;
     transform: translate(-300px);
     
 } */
+
+.background_2{
+    width: 100%;
+    height: 400px;
+    background-color:rgb(55, 71, 101) ;
+}
