--- a/practice/p1.css
+++ b/practice/p1.css
@@ -21,6 +21,7 @@ html,body{
     overflow: hidden;
     transform: translateX(-500px);
     transition-duration: 0.7s;
+    /* border-radius: 0 0 200px 0; */
 }
 .post_icon{
     position: absolute;
