--- a/main.css
+++ b/main.css
@@ -10,23 +10,28 @@
     width: 35px;
 }
 #menubutton{
-    margin-top: 4px;
+    padding-top: 4px;
     width: 50px;
     height: 100%;
     float: right;
     transition-duration: 0.3s;
-}
-#menubutton:hover{
-    transition-duration: 0.3s;
-    cursor: pointer;
     /* background-color: black; */
+}
+.booking_button{
+    width: 60px;
+    height: 70%;
+    float: right;
+    border: 1px solid black;
+    text-align: center;
+    margin-top: 5px;
+    margin-right: 10px;
 }
 .menuline{
     margin-top: 7px;
     position: relative;
-    
     height: 5px;
     background-color: black;
+    transition-duration: 0.4s;
 }
 .menuline-1{
     width: 40px;
@@ -43,9 +48,7 @@
     float: right;
     width: 35px;
 }
-#search:hover{
-    cursor: pointer;
-}
+
 html,body{
     height: 100%;
 }
@@ -78,18 +81,20 @@ body{
     width: 30%;;
     height: 100%;
     z-index: 2;
-    /* overflow: hidden; */
-    transform : translateX(100%);
+    overflow: hidden;
+    transform : translateX(110%);
     transition-duration: 0.4s;
+    box-shadow: 0px 5px 5px 5px black;
 }
 
 nav{
     height: 5%;
-    z-index: 1;
+    z-index: 3;
     overflow: hidden;
     /* background-color:; */
-    border-bottom:1px solid gray;
-    border-radius: 5px;
+    /* border-bottom:1px solid gray; */
+    box-shadow: 0 2px 2px 2px gray;
+    /* border-radius: 5px; */
 }
 .background{
     display: flex;
@@ -135,7 +140,7 @@ main{
     position: absolute;
     z-index: 1;
 }
-.point:hover{
+.a:hover{
     cursor: pointer;
 }
 .point_right{
@@ -157,6 +162,7 @@ main{
     transition-duration: 0.5s;
     z-index: 0;
     transform:translateX(-570px);
+    
 }
 /* .card:hover{
     box-shadow: 0px 5px 10px 5px gray;
@@ -173,4 +179,50 @@ main{
     width: 100%;
     height: 400px;
     background-color:rgb(55, 71, 101) ;
+}
+
+/*---------------- booking_main.css----------------*/
+.blank{
+    margin-top: 20px;
+    height: 100%;
+    width: 40px;    
+    float: left;
+    /* z-index: ; */
+    background-color: white;
+}
+.container{
+    margin-top: 20px;    
+    width: 150px;
+    height: 300px;
+    color: white;
+    background-color: #8181F7;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    border-radius: 5px;
+    /* overflow: hidden; */
+}
+
+.select_container{
+    /* overflow: hidden; */
+    
+    z-index: -1;
+    width: 1000px;
+    height: 300px;
+    position: absolute;
+    background-color: aqua;
+    opacity: 0.4;
+    /* transform: translateX(-850px); */
+    border-radius: 5px;
+    float: left;
+    transition-duration: 0.5s;
+    overflow: scroll;
+    
+}
+.imgcont{
+    width: 200px;
+    height: 100%;
+    background-color: wheat;
+    float: left;
+    margin-right: 10px;
 }
