--- a/main.css
+++ b/main.css
@@ -1,7 +1,12 @@
+a{
+    text-decoration: none;
+    color:  wheat;
+}
 #logo{
     margin-top: 6px;
-    width: 180px;
+    width: 110px;
     float: left;
+    margin-left: 10px;
 }
 #fabi{
     margin-top: 7px;
@@ -48,7 +53,6 @@
     float: right;
     width: 35px;
 }
-
 html,body{
     height: 100%;
 }
@@ -58,6 +62,7 @@ body{
     overflow-x: hidden;
 }
 .popup{
+    padding-top: 10px;
     position: absolute;
     width: 100%;
     height: 400px;
@@ -75,7 +80,6 @@ body{
     position: absolute;
     background: rgba(0,0, 0, 0.8);
     color:  wheat;
-    /* float: right; */
     text-align: center;
     right: 0;
     width: 30%;;
@@ -84,16 +88,31 @@ body{
     overflow: hidden;
     transform : translateX(110%);
     transition-duration: 0.4s;
-    box-shadow: 0px 5px 5px 5px black;
+    /* box-shadow: 0px 2px 5px 2px black; */
+}
+.button_login{
+    margin-top: 0;
+    display: flex;
+    /* border: 1px solid white; */
+    transition-duration: 0.1s;
+    background: rgba(255,255, 255, 0.2);
+    height: 5.3%;
+    justify-content : center;
+    align-items : center;
+}
+.button_login:hover{
+    transition-duration: 0.5s;
+    background: rgba(255,255, 255, 0.4);
 }
 
 nav{
+    position: relative;
     height: 5%;
     z-index: 3;
     overflow: hidden;
     /* background-color:; */
     /* border-bottom:1px solid gray; */
-    box-shadow: 0 2px 2px 2px gray;
+    box-shadow: 2px 2px 2px 2px gray;
     /* border-radius: 5px; */
 }
 .background{
@@ -117,8 +136,8 @@ main{
     position: absolute;
     width: 150px;
     height: 6px;
-    left: 50%;
-    top: 89%;
+    left: 45%;
+    top: 98%;
     border: 1px solid #D8D8D8;
     background-color: #D8D8D8;
     border-radius: 15px;
@@ -204,25 +223,26 @@ main{
 }
 
 .select_container{
-    /* overflow: hidden; */
-    
-    z-index: -1;
+    /* z-index: -1; */
     width: 1000px;
     height: 300px;
-    position: absolute;
+    /* position: absolute; */
     background-color: aqua;
     opacity: 0.4;
     /* transform: translateX(-850px); */
     border-radius: 5px;
     float: left;
-    transition-duration: 0.5s;
-    overflow: scroll;
-    
+    /* transition-duration: 0.5s; */
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
 .imgcont{
+    display: inline-block;
     width: 200px;
     height: 100%;
     background-color: wheat;
-    float: left;
+    /* float: left; */
     margin-right: 10px;
+    
 }
