--- a/signup.css
+++ b/signup.css
@@ -10,7 +10,7 @@ html,body{
 }
 .maincont{
     width: 600px;
-    height: 450px;
+    height: 550px;
     /* border: 1px solid black; */
     border-radius: 4px;
     box-shadow: 5px 10px 10px 5px rgba(0, 0, 0,0.2);
@@ -63,6 +63,28 @@ input{
     outline: 0;
     ime-mode: disabled;
 }
+select{
+    -webkit-appearance: none;
+    appearance: none;
+}
+select {
+    /* 생략 */
+    font-family: "Noto Sansf KR", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+
+    color: #444;
+    background-color: #fff;
+
+    padding: 0.6em 1.4em 0.5em 0.8em;
+    margin: 0;
+
+    border: 1px solid #aaa;
+    border-radius: 0.5em;
+    box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+}
+
 .footer{
     width: 100%;
     height:  30%;
