--- a/signup.css
+++ b/signup.css
@@ -63,27 +63,32 @@ input{
     outline: 0;
     ime-mode: disabled;
 }
-select{
+/* select{
     -webkit-appearance: none;
     appearance: none;
+} */
+form{
+    margin-top: 10px;
 }
 select {
-    /* 생략 */
     font-family: "Noto Sansf KR", sans-serif;
-    font-size: 1rem;
+    font-size: 10pt;
     font-weight: 400;
     line-height: 1.5;
 
     color: #444;
-    background-color: #fff;
+    background-color: #F2F2F2;
 
-    padding: 0.6em 1.4em 0.5em 0.8em;
-    margin: 0;
+    padding: 10px 5px 5px 10px;
+    
 
-    border: 1px solid #aaa;
-    border-radius: 0.5em;
-    box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+    /* border: 1px dotted #aaa; */
+    border: none;
+    text-align-last: center;
+    border-radius: 10px;
+ 
 }
+
 
 .footer{
     width: 100%;
