--- a/login.css
+++ b/login.css
@@ -44,7 +44,7 @@ html,body{
     width: 10px;
     height: 10px;
     border-radius: 20px;
-    border: 3px solid #A5DF00;
+    border: 3px solid #0B2161;
     margin-top: 10px;
     margin-right: 10px;
     transition-duration: 0.5s;
@@ -66,7 +66,7 @@ input{
 .footer{
     width: 100%;
     height:  30%;
-    background-color: #D8F781;
+    background-color: #0B2161;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,7 +92,7 @@ input{
     padding-top: 10px;
     margin-top: 15px;
     text-decoration: none;
-    color: black;
+    color: white;
 }
 .signup:visited{
     text-decoration: none;
