--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ html,body{
     width: 100%;
     height:100%;
     padding:0;
-    margin: 0;
+    margin: 0;    
 }
 p{
     margin: 0;
@@ -20,7 +20,8 @@ p{
 }
 .topblank{
     width: 100%;
-    height: 40px;
+    height: 60px;
+    position: relative;    
 }
 nav{
     float: left;
@@ -34,10 +35,13 @@ nav{
     overflow: hidden;
 }
 .leftsection{
+    width: 100%;    
     flex-direction: column;
     display: flex;
     align-items: center;
     /* height: 1200px; */
+    /* background-color: #A9D0F5;     */
+    
 }
 main{
     float: left;
@@ -45,30 +49,23 @@ main{
     height: 100%;
 }
 .menubar{
-    margin-bottom: 40px;
+    width: 20px;
+    border: 1px solid gray;    
+    margin-top: 15px;
 }
 .menu{
-    position: absolute;
     width: 100%;
-    height: 745px;
-    background-color: #BDBDBD;
-    /* opacity: 0.7; */
-    transform: translateY(-100%);
-    transition-duration: 0.7s;
-    /* display: flex;
+    height: 200px; 
+    margin-top: 40px;       
+}
+.left_menu_button{
+    height: 25%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center; */
-    text-align: center;
-
-}
-
-.menu-icon-img{
-    width: 40px;   
-    margin-top: 10px;
-}
-.menu-icon-img:hover{
-    opacity: 0.4;
-    
+    align-items: center;
+    color: #424242;
+    /* background-color: #CEE3F6;     */
 }
 .line{
     margin-top: 4px;
@@ -87,38 +84,46 @@ main{
     writing-mode: vertical-rl;;
     margin-top: 20px;
     margin-bottom: 20px;
-    font-size: 10pt;
+    font-size: 20pt;
 }
-.left-icon{
-    width: 30px;
-    margin-top: 30px;
-    opacity: 0.6;
-}
-
 
 .maincont{
     /* float: left; */
     /* display: inline-block; */
     /* display: flex; */
-    width: 80%;
+    width: 78%;
     height: 100%;
     float: left;
 }
 .card-section{
     overflow: hidden;
     width: 1200px;
-    height: 640px;
+    height: 600px;
     position: relative;
-    display: flex;
+    /* display: flex; */
+    /* display: inline-block; */
     box-shadow: 2px 5px 2px rgba(0, 0, 0,0.2);
 }
-
+.slide{
+    /* position: absolute; */
+}
+.card{    
+    transition-duration: 0.7s;
+    position: absolute;
+    width: 1200px;
+    height: 640px;
+    /* opacity: 0.5; */    
+}
+#card2,#card3,#card4,#card5 {
+    /* display: none; */
+    opacity: 0;
+}
 .card-button{
     position: absolute;
     display: flex;    
     right: 0;
     bottom: 0;
-    background-color: #D8F781;
+    background-color: rgba(255,255,255,0.9)
 }
 .leftbutton, .rightbutton{
     display: flex;
@@ -130,56 +135,92 @@ main{
 }
 .leftbutton:hover, .rightbutton:hover{
     transition-duration: 0.4s;
-    background-color: #F7BE81;
+    background-color: rgba(182,161,156,1)
 }
 .card-button-img{
     width: 30%;
 }
 .card-text{
     position: absolute;
-    left: 60px;
-    bottom: 10px;
-    font-size: 80pt;
+    /* left: 60px; */
+    bottom: 0px;    
     z-index: 1;
+    background-color: rgba(0, 0, 0,0.3);
+    width: 500px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    font-family: KoreanAGDL;
 }
-.card-text-p{
-    margin-top: -50px;
-    font-weight: bold;
+#card-text-p-name{
+    font-size: 80pt;
+    margin-top: 10px;
+    /* font-weight: bold; */
+    color: white;
+    
     /* text-align: center; */
 }
-.card{    
-    transition-duration: 1s;
-    position: absolute;
-    width: 100%;
-    height: 640px;
-    opacity: 0.5;
-    /* transform: rotate(-20deg) translate(-30%,-20%); */
-    
+#card-text-p-description{
+    color: white;
+    margin-left: 20px;
+    margin-top: 10px;
+    padding-top: 5px;
+    border-top: 1px solid white;
+    width: 30px;
 }
-.card2{
-    max-width: 20%;
-    overflow: hidden;
-}
-
 .nav-right{
     float: left;
-    width: 10%;
-    height: 640px;
-    border-top: 1px solid gray;
-    position: relative;
+    width: 15%;
+    position: fixed;
+    /* border: 1px solid gray; */
+    /* position: relative; */
+    right: 100px;
 }
-.nav-right-p{
-    /* position: absolute; */
-    /* bottom: 0; */
-    font-weight: lighter;
-    font-size: 50px;
+.left-icon , .right-icon{
+    width: 30px;
+    height: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    opacity: 1;
+    filter: invert(100%);
+}
+.left-icon{
+    filter:none;
+}
+.nav-right-top{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    /* border: 1px solid gray; */
+    background-color:  #0B2161;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    
+}
+.nav-right-cont{
+    width: 100%;
+    margin-top: 5px;
+    height: 530px;
+    border: 1px solid gray;
+}
+.nav-right-cont > p{
+    text-align: center;
+    
+}
+.nav-right-cont-img{
+    width: 200px;
 }
 
-.middle{
-    overflow: hidden;
-    margin-top: 40px;
+
+.middle{        
     width: 1200px;
-    height: 100px;    
+    height: 231px; 
+    overflow: hidden;   
+    z-index: -1;
+}
+.card-section-next{
+    width: 100%;
+    filter: brightness(80%);
 }
 
 
@@ -187,28 +228,21 @@ main{
 
 footer{
     bottom: 0;
-    left: 400px;
+    width: 100%;    
+    height: 100px;
     position: absolute;
-    display: flex;
+    bottom : 0;
+    background-color: #0A122A;
 }
-.bottom-box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 90px;
-    height: 90px;
-    background-color: #D8D8D8;
+.bottom-section-p{
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+}
+#locale,#copyright{
+    font-size: 8pt;
+    color: #E6E6E6;
+    font-family: KoreanAGDL;
+}
+
     
-}
-.bottom-box2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20px;
-    width: 350px;
-    height: 90px;
-    background-color: #D8F781;
-}
-.bottom-img{
-    transform: rotate(90deg);
-}
