--- a/main.css
+++ b/main.css
@@ -115,11 +115,11 @@ main{
     /* position: absolute; */
 }
 .card{    
-    transition-duration: 0.7s;
+    transition-duration: 0.5s;
     position: absolute;
     width: 1200px;
     height: 640px;
-    /* opacity: 0.5; */    
+    opacity: 1;    
 }
 #card2,#card3,#card4,#card5 {
     /* display: none; */
@@ -170,10 +170,10 @@ main{
 #card-text-p-description{
     color: white;
     margin-left: 20px;
-    margin-top: 10px;
-    padding-top: 5px;
-    border-top: 1px solid white;
-    width: 30px;
+    margin-top: 15px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid white;
+    width: 100px;
 }
 .nav-right{
     float: left;
