--- a/faq.css
+++ b/faq.css
@@ -6,7 +6,7 @@ html,body{
     cursor: pointer;
 }
 nav{
-    float: left;
+    float: left!important;
     width: 10%;
     height: 100%;
     /* background-color: blue; */
