--- a/main.css
+++ b/main.css
@@ -24,12 +24,13 @@ a:visited , a:link{
     transition-duration: 0.2s;
     transform: scale(1.2);
 }
-.topblank{
+/* .topblank{
     width: 100%;
     height: 60px;
     position: relative;    
-}
+} */
 nav{
+    margin-top: 20px;
     float: left;
     width: 10%;
     height: 100%;
@@ -46,12 +47,15 @@ nav{
     display: flex;
     align-items: center;
     /* height: 1200px; */
-    /* background-color: #A9D0F5;     */
-    
+    /* background-color: #A9D0F5;     */   
+}
+#logo{
+    width: 120px;
 }
 main{
+    margin-top: 50px;
     float: left;
-    width: 90%;
+    width: 85%;
     height: 100%;
 }
 .menubar{
@@ -102,10 +106,10 @@ main{
     float: left;
 }
 .card-section{
-    margin-top: 60px;
+    margin-top: 30px;
     overflow: hidden;
-    width: 1200px;
-    height: 630px;
+    width: 1300px;
+    height: 680px;
     position: relative;
     /* display: flex; */
     /* display: inline-block; */
@@ -117,8 +121,8 @@ main{
 .card{    
     transition-duration: 0.5s;
     position: absolute;
-    width: 1200px;
-    height: 640px;
+    width: 1300px;
+    height: 680px;
     opacity: 1;    
 }
 #card2,#card3,#card4,#card5 {
@@ -176,12 +180,12 @@ main{
     width: 100px;
 }
 .nav-right{
+    margin-top: 50px;
     float: left;
-    width: 15%;
-    position: fixed;
-    /* border: 1px solid gray; */
-    /* position: relative; */
-    right: 100px;
+    width: 5%;
+    /* position: fixed; */
+    height: 100%;
+    /* background-color: black; */
 }
 .left-icon , .right-icon{
     width: 30px;
@@ -196,28 +200,8 @@ main{
 }
 .nav-right-top{
     display: flex;
-    justify-content: space-around;
-    width: 100%;
-    /* border: 1px solid gray; */
-    /* background-color:  #0B2161; */
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    
+    flex-direction: column;
 }
-.nav-right-cont{
-    width: 100%;
-    margin-top: 5px;
-    height: 530px;
-    border: 1px solid gray;
-}
-.nav-right-cont > p{
-    text-align: center;
-    
-}
-.nav-right-cont-img{
-    width: 200px;
-}
-
 
 .middle{        
     width: 1200px;
@@ -230,14 +214,11 @@ main{
     filter: brightness(80%);
 }
 
-
-
-
 footer{
     bottom: 0;
     width: 100%;    
     height: 100px;
-    position: absolute;
+    position: fixed;
     bottom : 0;
     background-color: #0A122A;
 }
