--- a/useGuide.css
+++ b/useGuide.css
@@ -1,6 +1,6 @@
 html,body{
     width: 100%;
-    height: 1200px;         
+    height: 1300px;         
 }
 .a{
     cursor: pointer;
@@ -92,8 +92,8 @@ main{
     vertical-align: middle;
     text-align: center;
     margin-right: 5px;
-    width: 180px;
-    height: 50px;
+    width: 200px;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,11 +112,11 @@ main{
     list-style: none;
 }
 .topmenu-li1{ 
-    /* display: none; */
+    margin-top: 50px;
 }
 .topmenu-li1 > img{
     margin-top: 10px;
-    width: 2%;
+    width: 20px;
     transform: rotate(90deg);
 }
 .topmenu-li1-guide{
@@ -137,7 +137,7 @@ main{
     font-size: 40pt;
 }
 .topmenu-li1-guide-left > img{
-    width: 40%;
+    width: 40px;
     filter: invert(100%);
 }
 .topmenu-li1-guide-right{
@@ -158,10 +158,15 @@ main{
     font-size: 40pt;
     margin-left: 20px;
 }
+.table_css{
+    float: left;    
+    margin-left: 10px;
+}
 .table_css > thead > tr > th{
     background-color: rgba(68, 86, 117,0.9);
     color: white;
     text-align: center;
+    height: 30px;
 }
 td{
     width: 350px;
@@ -169,10 +174,18 @@ td{
     border-top: 1px solid #E6E6E6;
     border-bottom: 1px solid #E6E6E6;
     display: flex;
-    justify-content: space-between;
-    padding-left: 10px;
-    padding-right: 10px;
+    
+    justify-content: space-around;
+    /* padding-left: 10px;
+    padding-right: 10px; */
 }
+.topmenu-li2{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
 .topmenu-li2 , .topmenu-li3, .topmenu-li4{
     display: none;
 }
@@ -180,14 +193,33 @@ td{
     
 }
 .topmenu-li3 > img{    
-    width: 75%;
+    width: 95%;
     transition: 0.5s;
     z-index: 0;
+    /* border: 1px solid black; */
+    box-shadow: 0px 0px 0px 2px rgba(68, 86, 117,0.3);
+    border-radius: 5px;
 }
-/* .topmenu-li3 > img:hover{
-    transition: 0.5s;
-    transform: scale(1.4);
-} */
+.topmenu-li3-button > a>button,.topmenu-li3-button >button{
+    margin-top: 20px;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    background-color: rgba(68, 86, 117,1);
+    width: 150px;
+    height: 50px;
+
+}
+.topmenu-li3-button >a> button>img ,.topmenu-li3-button > button>img{
+    width: 15px;
+    filter: invert(100%);
+    margin-left: 10px;
+}
+button:focus,button:active{
+    outline: none;
+ 
+}
+
 footer{
     bottom: 0;
     width: 100%;    
@@ -196,6 +228,7 @@ footer{
     bottom : 0;
     background-color: #0A122A;
     z-index: 1;
+    opacity: 0.9;
 }
 .bottom-section-p{
     position: absolute;
